--- a/application.html
+++ b/application.html
@@ -7,9 +7,13 @@
     <form>
       <fieldset>
         <legend>Setup</legend>
-        <div class="field slanted-block">
+        <div class="field">
           <label for="player">Player</label>
-          <input type="text" name="player" />
+          <div class="input-border">
+            <span class="left-extra"></span>
+            <input type="text" name="player" required />
+            <span class="right-extra"></span>
+          </div>
         </div>
         <div class="field">
           <label for="name">Name</label>
