Now with buttons on left & right
The code is getting really complicated. But it works, and looks good.

--- a/application.html
+++ b/application.html
@@ -18,7 +18,11 @@
         </div>
         <div class="field">
           <label for="role">Role</label>
-          <input type="text" name="role" />
+          <div class="options-carousel">
+            <button class="back"></button>
+            <input type="text" name="role" />
+            <button class="forward"></button>
+          </div>
         </div>
       </fieldset>
       <fieldset>
