--- a/application.html
+++ b/application.html
@@ -2,6 +2,7 @@
   <head>
     <title>Shangrila</title>
     <link rel="stylesheet" href="application.css" />
+    <script type="module" src="application.js"></script>
   </head>
   <body>
     <form>
@@ -18,10 +19,10 @@
         </div>
         <div class="field">
           <label for="role">Role</label>
-          <div class="options-carousel">
-            <button class="back"></button>
-            <input type="text" name="role" list="roles" readonly="readonly"/>
-            <button class="forward"></button>
+          <div class="options-carousel" data-controller="options-carousel">
+            <button class="back" data-action="options-carousel#prev" type="button"></button>
+            <input type="text" name="role" list="roles" readonly="readonly" data-options-carousel-target="field" />
+            <button class="forward" data-action="options-carousel#next" type="button"></button>
           </div>
           <datalist id="roles">
             <option value="Fixer"></option>
