--- a/application.html
+++ b/application.html
@@ -86,6 +86,7 @@
             </tr>
           </tbody>
         </table>
+        <button type="button" class="btn-action">Random</button>
         
         <div class="field">
           <label for="personality">Personality</label>
