Wrapping button and table

--- a/application.html
+++ b/application.html
@@ -36,58 +36,59 @@
           <label for="origins">Cultural origins</label>
           <input type="text" name="origins" required />
         </div>
-        <table class="field-choices">
-          <thead>
-            <tr>
-              <th>Roll</th>
-              <th>Origins</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th>1</th>
-              <td>North American</td>
-            </tr>
-            <tr>
-              <th>2</th>
-              <td>South/Central American</td>
-            </tr>
-            <tr>
-              <th>3</th>
-              <td>Western Europe</td>
-            </tr>
-            <tr>
-              <th>4</th>
-              <td>Eastern Europe</td>
-            </tr>
-            <tr>
-              <th>5</th>
-              <td>Middle Eastern/North African</td>
-            </tr>
-            <tr>
-              <th>6</th>
-              <td>Sub-Saharan African</td>
-            </tr>
-            <tr>
-              <th>7</th>
-              <td>South Asian</td>
-            </tr>
-            <tr>
-              <th>8</th>
-              <td>South-East Asian</td>
-            </tr>
-            <tr>
-              <th>9</th>
-              <td>East Asian</td>
-            </tr>
-            <tr>
-              <th>10</th>
-              <td>Oceania/Pacific Islander</td>
-            </tr>
-          </tbody>
-        </table>
-        <button type="button" class="btn-action">Random</button>
-        
+        <div class="options-table">
+          <table>
+            <thead>
+              <tr>
+                <th>Roll</th>
+                <th>Origins</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th>1</th>
+                <td>North American</td>
+              </tr>
+              <tr>
+                <th>2</th>
+                <td>South/Central American</td>
+              </tr>
+              <tr>
+                <th>3</th>
+                <td>Western Europe</td>
+              </tr>
+              <tr>
+                <th>4</th>
+                <td>Eastern Europe</td>
+              </tr>
+              <tr>
+                <th>5</th>
+                <td>Middle Eastern/North African</td>
+              </tr>
+              <tr>
+                <th>6</th>
+                <td>Sub-Saharan African</td>
+              </tr>
+              <tr>
+                <th>7</th>
+                <td>South Asian</td>
+              </tr>
+              <tr>
+                <th>8</th>
+                <td>South-East Asian</td>
+              </tr>
+              <tr>
+                <th>9</th>
+                <td>East Asian</td>
+              </tr>
+              <tr>
+                <th>10</th>
+                <td>Oceania/Pacific Islander</td>
+              </tr>
+            </tbody>
+          </table>
+          <button type="button" class="btn-action">Random</button>
+        </div>
         <div class="field">
           <label for="personality">Personality</label>
           <input type="text" name="personality" required />
